fix: fix to align block

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .container {
     max-width: 1440px;
-    margin: 15px 15px;
+    margin: auto;
 }
 
 header {
